# warp-ios

./: .gitignore  Cargo.toml
.github/workflows/: ios-testflight.yml
ci_scripts/: ci_post_clone.sh
crates/ai_terminal_runtime/: Cargo.toml
crates/ai_terminal_runtime/src/: lib.rs
crates/warp_ios_bridge/: Cargo.toml
crates/warp_ios_bridge/src/: lib.rs  warp_ios_bridge.udl
ios/: .gitignore  DEPLOY.md  ExportOptions.plist
ios/warp-ios/: Info.plist
ios/warp-ios/warp-ios.xcodeproj/: project.pbxproj
ios/warp-ios/warp-ios.xcodeproj/xcshareddata/xcschemes/: warp-ios.xcscheme
ios/warp-ios/warp-ios/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/warp-ios/warp-ios/WarpApp/Models/: SSHHost.swift  TerminalBlock.swift  TerminalBlockStore.swift
ios/warp-ios/warp-ios/WarpApp/Services/: KeychainService.swift  SSHSession.swift  WarpSessionController.swift
ios/warp-ios/warp-ios/WarpApp/Views/: AddHostView.swift  BlockListView.swift  BlockRowView.swift  ConnectedTerminalView.swift  HostListView.swift  KeyAccessoryBar.swift  TerminalView.swift
